--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 
     <!-- A-Frame の VR空間に AR.js を紐づける（デバッグUIを非表示） -->
     <a-scene embedded arjs="debugUIEnabled:false;">
+      <a-assets>
+        <a-asset-item id="pin" src="./assets/pin/pin.gltf"></a-asset-item>
+      </a-assets>
       <!-- マーカーを登録（プリセットされている「hiro」マーカー） -->
       <a-marker preset="hiro">
         <!-- マーカーの場所に箱を置く（見やすいようにワイヤーフレーム表示） -->
-        <a-box position="0 0.5 0" wireframe="true"></a-box>
+        <a-entity gltf-model="#pin"></a-entity>
       </a-marker>
 
       <!-- AR用のカメラを置く -->
