--- a/index.html
+++ b/index.html
@@ -18,19 +18,11 @@
       </a-assets>
       <!-- マーカーを登録（プリセットされている「hiro」マーカー） -->
       <a-marker preset="hiro">
-        <a-entity gltf-model="#pin"></a-entity>
+        <a-entity gltf-model="#pin" position="1 2 3"></a-entity>
       </a-marker>
 
       <a-marker type="pattern" url="./assets/pattern.patt">
         <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#f00">
-          <a-animation
-            attribute="position"
-            to="0 1 0"
-            direction="alternate"
-            dur="2000"
-            repeat="indefinite"
-          >
-          </a-animation>
         </a-sphere>
       </a-marker>
 
