--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       </a-assets>
       <!-- マーカーを登録（プリセットされている「hiro」マーカー） -->
       <a-marker preset="hiro">
-        <a-entity gltf-model="#pin" position="1 2 3"></a-entity>
+        <a-entity
+          gltf-model="#pin"
+          position="1 0 0"
+          scale="0.1 0.1 0.1"
+        ></a-entity>
       </a-marker>
 
       <a-marker type="pattern" url="./assets/pattern.patt">
