--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         ></a-entity>
       </a-marker>
 
-      <a-marker type="pattern" url="./assets/pattern.patt">
+      <!-- <a-marker type="pattern" url="./assets/pattern.patt">
         <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#f00">
         </a-sphere>
-      </a-marker>
+      </a-marker> -->
 
       <!-- AR用のカメラを置く -->
       <a-entity camera></a-entity>
