--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <a-assets>
         <a-asset-item id="pin" src="./assets/pin/pin.gltf"></a-asset-item>
       </a-assets>
-      <!-- マーカーを登録（プリセットされている「hiro」マーカー） -->
-      <a-marker preset="hiro">
+
+      <a-marker type="pattern" url="./assets/pattern.patt">
         <a-entity
           gltf-model="#pin"
           position="0 0 0"
@@ -25,11 +25,6 @@
           animation-mixer
         ></a-entity>
       </a-marker>
-
-      <!-- <a-marker type="pattern" url="./assets/pattern.patt">
-        <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#f00">
-        </a-sphere>
-      </a-marker> -->
 
       <!-- AR用のカメラを置く -->
       <a-entity camera></a-entity>
