--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a-asset-item id="pin" src="./assets/pin/pin.gltf"></a-asset-item>
         <a-asset-item
           id="tokyo"
+          timeout="10000"
           src="./assets/tokyo/53393503_bldg_6677.objf"
         ></a-asset-item>
       </a-assets>
