--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a-asset-item
           id="tokyo"
           timeout="10000"
-          src="./assets/tokyo/53393503_bldg_6677.objf"
+          src="./assets/tokyo/53393503_bldg_6677.obj"
         ></a-asset-item>
       </a-assets>
 
