--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
       <a-marker type="pattern" url="./assets/pattern.patt">
         <a-entity
-          obj-model="obj: #tokyo"
+          obj-model="#tokyo"
+          material="color: grey"
           position="0 0 0"
           scale="0.1 0.1 0.1"
           animation-mixer
