--- a/index.html
+++ b/index.html
@@ -15,19 +15,13 @@
     <a-scene embedded arjs="debugUIEnabled:false;">
       <a-assets>
         <a-asset-item id="pin" src="./assets/pin/pin.gltf"></a-asset-item>
-        <a-asset-item
-          id="tokyo"
-          timeout="10000"
-          src="./assets/tokyo/53393503_bldg_6677.obj"
-        ></a-asset-item>
       </a-assets>
 
       <a-marker type="pattern" url="./assets/pattern.patt">
         <a-entity
-          obj-model="#tokyo"
-          material="color: grey"
+          gltf-model="#pin"
           position="0 0 0"
-          scale="0.1 0.1 0.1"
+          scale="0.3 0.3 0.3"
           animation-mixer
         ></a-entity>
       </a-marker>
