--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a-asset-item id="pin" src="./assets/pin/pin.gltf"></a-asset-item>
       </a-assets>
 
-      <a-marker type="pattern" url="./assets/pattern.patt">
+      <a-marker type="pattern" smooth="true" url="./assets/pattern.patt">
         <a-entity
           gltf-model="#pin"
           position="0 0 0"
