--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>CoopAR</title>
-  </head>
-  <body style="margin: 0px; overflow: hidden">
-    <!-- A-Frame ライブラリの読み込み -->
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+<a-scene
+  arjs
+  embedded
+  renderer="logarithmicDepthBuffer: true;"
+  vr-mode-ui="enabled: false"
+  gesture-detector
+  id="scene"
+>
+  <a-assets>
+    <a-asset-item
+      id="bowser"
+      src="https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb"
+    >
+    </a-asset-item>
+  </a-assets>
 
-    <!-- A-Frame の VR空間に AR.js を紐づける（デバッグUIを非表示） -->
-    <a-scene embedded arjs="debugUIEnabled:false;">
-      <a-assets>
-        <a-asset-item id="pin" src="./assets/pin/pin.gltf"></a-asset-item>
-      </a-assets>
-
-      <a-marker type="pattern" smooth="true" url="./assets/pattern.patt">
-        <a-entity
-          gltf-model="#pin"
-          position="0 0 0"
-          scale="0.3 0.3 0.3"
-          animation-mixer
-        ></a-entity>
-      </a-marker>
-
-      <!-- AR用のカメラを置く -->
-      <a-entity camera></a-entity>
-    </a-scene>
-  </body>
-</html>
+  <a-marker
+    preset="hiro"
+    raycaster="objects: .clickable"
+    emitevents="true"
+    cursor="fuse: false; rayOrigin: mouse;"
+    id="markerA"
+  >
+    <a-entity
+      id="bowser-model"
+      gltf-model="#bowser"
+      position="0 0 0"
+      scale="0.05 0.05 0.05"
+      class="clickable"
+      gesture-handler
+    >
+    </a-entity>
+  </a-marker>
+  <a-entity camera></a-entity>
+</a-scene>
