--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <title>CoopAR</title>
   </head>
   <body style="margin: 0px; overflow: hidden">
-    <!-- A-Frame ライブラリの読み込み -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 
-    <!-- A-Frame の VR空間に AR.js を紐づける（デバッグUIを非表示） -->
     <a-scene
       arjs
       embedded
@@ -21,30 +19,26 @@
       id="scene"
     >
       <a-assets>
-        <a-asset-item
-          id="bowser"
-          src="https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb"
-        >
-        </a-asset-item>
+        <a-asset-item id="pin" src="./assets/pin/pin.gltf"></a-asset-item>
       </a-assets>
 
       <a-marker
-        preset="hiro"
+        type="pattern"
+        smooth="true"
+        url="./assets/pattern.patt"
         raycaster="objects: .clickable"
         emitevents="true"
         cursor="fuse: false; rayOrigin: mouse;"
-        id="markerA"
       >
         <a-entity
-          id="bowser-model"
-          gltf-model="#bowser"
+          gltf-model="#pin"
           position="0 0 0"
-          scale="0.05 0.05 0.05"
-          class="clickable"
-          gesture-handler
-        >
-        </a-entity>
+          scale="0.3 0.3 0.3"
+          animation-mixer
+        ></a-entity>
       </a-marker>
+
+      <!-- AR用のカメラを置く -->
       <a-entity camera></a-entity>
     </a-scene>
   </body>
