--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
       </a-assets>
 
       <a-marker
-        type="pattern"
+        preset="hiro"
         smooth="true"
-        url="./assets/pattern.patt"
         raycaster="objects: .clickable"
         emitevents="true"
         cursor="fuse: false; rayOrigin: mouse;"
