--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       </a-assets>
 
       <a-marker
-        preset="hiro"
+        type="barcode"
+        value="7"
         smooth="true"
         raycaster="objects: .clickable"
         emitevents="true"
