--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
       </a-assets>
 
       <a-marker
-        type="barcode"
-        value="7"
+        preset="hiro"
         smooth="true"
         raycaster="objects: .clickable"
         emitevents="true"
