--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           scale="0.3 0.3 0.3"
           animation-mixer
           gesture-handler
+          coop
         ></a-entity>
       </a-marker>
 
