--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     >
       <a-assets>
         <a-asset-item id="pin" src="./assets/pin/pin.gltf"></a-asset-item>
+        <a-asset-item id="air" src="./assets/Cesium_Air.glb"></a-asset-item>
       </a-assets>
 
       <a-marker
@@ -32,9 +33,8 @@
         cursor="fuse: false; rayOrigin: mouse;"
       >
         <a-entity
-          gltf-model="#pin"
+          gltf-model="#air"
           position="0 0 0"
-          scale="0.1 0.1 0.1"
           animation-mixer
           gesture-handler
           coop
