--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <a-entity
           gltf-model="#air"
           position="0 0 0"
+          scale="0.1 0.1 0.1"
           animation-mixer
           gesture-handler
           coop
